Changes to 3.2 and minor wording changes in other parts

--- a/paper.tex
+++ b/paper.tex
@@ -262,9 +262,9 @@ We then describe the principles underlying the design of our system
   and quickly arrive at the desired result.
 \end{itemize}
 
-While each of these principles has been explored in prior work, our
-contribution in this work is combining them into a novel application to
-the domain of end user web scraping and customization.
+While each of these principles has been explored in prior work by
+various researchers, our contribution in this work is combining them in
+a novel way for the domain of end-user web scraping and customization.
 
 Finally, we share our broader vision for \emph{end-user web scraping for
 customization}, and some opportunities for future work, including a
@@ -494,7 +494,9 @@ environments in which programmers receive immediate feedback about a
 program while it is being created. In the context of Wildcard, adapters
 are the program, the table interface is the output of the program and
 the highlighting on the website is the visual representation of the
-program. Live programming in our system is implemented by continually
+program.
+
+Live programming in our system is implemented by continually
 re-generating an adapter based on the DOM element under the user's
 cursor and the previous demonstrations if any, reverting if the user
 hovers away and committing when the user clicks. The row and column
@@ -891,9 +893,9 @@ link elements have an \emph{href} attribute which contain the URLs
 associated with the link element and video elements have
 \emph{currentTime} and \emph{duration} attributes which contain data
 about the current playback position and duration respectively. This use
-of spreadsheet-like formulas to specify logic is related to approaches
-taken by Microsoft Power Apps \citep{zotero-94}, Glide
-\citep{zotero-108}, Coda \citep{zotero-110} and Gneiss
+of spreadsheet-like formulas to enable end-users to specify logic is
+related to approaches taken by Microsoft Power Apps \citep{zotero-94},
+Glide \citep{zotero-108}, Coda \citep{zotero-110} and Gneiss
 \citep{chang2014}.
 
 To assess our design principles, we plan to carry out a broader
