Add Wildcard citation from Onward!

--- a/paper.tex
+++ b/paper.tex
@@ -200,7 +200,7 @@ Greasemonkey \citep{zotero-90} and Tampermonkey \citep{zotero-92} to
 install browser userscripts, snippets of Javascript code which customize
 the behavior of websites.
 
-In our prior work, we presented Wildcard \citep{litt2020a}, a
+In our prior work, we presented Wildcard \citep{litt2020a, litt2020b}, a
 customization system which enables end-users to customize websites
 through direct manipulation. It does this by augmenting websites with a
 table view that shows their underlying structured data. The table is
@@ -396,7 +396,7 @@ current limitations of our system.
 Algorithm}\label{wrapper-induction-algorithm}}
 
 In order to generate reusable scrapers from user demonstrations, our
-system solves the \emph{wrapper induction} \citep{kushmerick2000} task:
+system solves the wrapper induction \citep{kushmerick2000} task:
 generalizing from a small set of user-provided examples to a scraping
 specification that will work on other parts of the website, and on
 future versions of the website.
