--- a/references-biblatex.bib
+++ b/references-biblatex.bib
@@ -334,6 +334,24 @@
   langid = {english}
 }
 
+@inproceedings{litt2020b,
+  title = {End-User Software Customization by Direct Manipulation of Tabular Data},
+  booktitle = {Proceedings of the 2020 {{ACM SIGPLAN International Symposium}} on {{New Ideas}}, {{New Paradigms}}, and {{Reflections}} on {{Programming}} and {{Software}}},
+  author = {Litt, Geoffrey and Jackson, Daniel and Millis, Tyler and Quaye, Jessica},
+  date = {2020-11-18},
+  pages = {18--33},
+  publisher = {{ACM}},
+  location = {{Virtual USA}},
+  doi = {10.1145/3426428.3426914},
+  url = {https://dl.acm.org/doi/10.1145/3426428.3426914},
+  urldate = {2021-03-14},
+  abstract = {Customizing software should be as easy as using it. Unfortunately, most customization methods require users to abruptly shift from using a graphical interface to writing scripts in a programming language.},
+  eventtitle = {{{SPLASH}} '20: {{Conference}} on {{Systems}}, {{Programming}}, {{Languages}}, and {{Applications}}, {{Software}} for {{Humanity}}},
+  file = {/Users/kapayakatongo/Zotero/storage/K64V9RPF/Litt et al. - 2020 - End-user software customization by direct manipula.pdf},
+  isbn = {978-1-4503-8178-9},
+  langid = {english}
+}
+
 @incollection{little2010,
   title = {Chapter 15 - {{Sloppy}} Programming},
   booktitle = {No {{Code Required}}},
