Removed ads from demo screenshots and added acknoledgements section

--- a/paper.tex
+++ b/paper.tex
@@ -915,6 +915,13 @@ Our ultimate goal is to empower end-users to customize websites in the
 course of their daily use in an intuitive and flexible way, and thus
 make the web more malleable for all of its users.
 
+\hypertarget{acknowledgements}{%
+\section{Acknowledgements}\label{acknowledgements}}
+
+Thank you to Gloria Lin, Joshua Pollock, the members of MIT's Software
+Design Group, the anonymous reviewers of PX/21 and the particpants of
+PX/21 for providing valuable feedback on this work.
+
 % \printbibliography
 
 %%
