Remved link to web version from demos section

--- a/paper.tex
+++ b/paper.tex
@@ -274,9 +274,7 @@ the web scraping process (Section~\ref{sec:conclusion}).
 \section{Motivating Examples}\label{sec:demos}}
 
 In this section, we show how end-users can create, extend and repair
-adapters for Wildcard via demonstration.{ These demos are best viewed as
-videos in the online version of this paper
-(\url{https://kapaya.github.io/px21}).}
+adapters for Wildcard via demonstration.
 
 \hypertarget{creating-an-adapter}{%
 \subsection{Creating An Adapter}\label{creating-an-adapter}}
