Update HTML acknowledgements section as well

--- a/paper.tex
+++ b/paper.tex
@@ -932,10 +932,12 @@ course of their daily use in an intuitive and flexible way, and thus
 make the web more malleable for all of its users.
 
 \section*{Acknowledgments}
-Thank you to Gloria Lin, Joshua Pollock, the members of MIT's Software Design Group,
-the anonymous reviewers of PX/21 and the particpants of PX/21 for providing valuable
-feedback on this work. The authors gratefully acknowledge the support of the CNS division of the National Science Foundation
-through award number 1801399.
+
+Thank you to Gloria Lin, Joshua Pollock, the members of MIT's Software
+Design Group, the anonymous reviewers of PX/21 and the particpants of
+PX/21 for providing valuable feedback on this work. The authors
+gratefully acknowledge the support of the CNS division of the National
+Science Foundation through award number 1801399.
 
 % \printbibliography
 
